<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mako Zero</string>
    <string name="app_desc">Just a launcher that gets out of the way</string>
    <string name="app_version">%1$s v%2$d</string>
    <string name="app_claims_ads_desc">No Ads</string>
    <string name="app_claims_background_tasks_desc">No Background Activity</string>
    <string name="app_claims_offline_desc">Works Completely Offline</string>
    <string name="app_claims_trackers_desc">No Tracking</string>
    <string name="app_claims_min_api">Supports Android 2.0 and Later</string>
    <string name="app_claims_app_size">From 80 to 130 KB</string>

    <string name="license_gpl3" translatable="false">GPL 3.0</string>

    <string name="header_settings">Settings</string>
    <string name="header_system">System</string>
    <string name="header_groups">Groups</string>
    <string name="header_themes">Themes</string>
    <string name="header_applications">Applications</string>
    <string name="header_rename_app">Rename Application</string>
    <string name="header_move_to_group">Move to group</string>

    <string name="btn_go_back">GO BACK</string>
    <string name="btn_set_default_launcher">SET LAUNCHER AS DEFAULT</string>
    <string name="btn_refresh_launcher">REFRESH LAUNCHER</string>
    <string name="btn_edit_apps">EDIT APPLICATIONS</string>
    <string name="btn_add_group">+ ADD GROUP</string>
    <string name="btn_about">ABOUT</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_delete_group">DELETE GROUP</string>

    <string name="label_prevent_screen_rotation">Prevent screen rotation</string>
    <string name="label_app_zoom">App Zoom</string>
    <string name="label_collapse_groups">Collapse groups when returning home</string>
    <string name="label_auto_collapse">Auto-collapse other groups</string>
    <string name="label_show_api_levels">Show min/target API levels</string>
    <string name="label_show_apps_size">Show applications size</string>
    <string name="label_show_profile">Show profile indicator</string>
    <string name="label_delete_group_confirm">Are you sure you want to delete this group?</string>
    <string name="label_delete_group_target">Your apps will go to the following group:</string>

    <string name="label_zoom_unit" translatable="false">%</string>
    <string name="label_api_separator" translatable="false">-</string>
    <string name="label_collapse_indicator" translatable="false">[-]</string>
    <string name="label_expand_indicator" translatable="false">[+]</string>

    <string name="toast_unable_to_launch_app">Unable to open app</string>
    <string name="toast_group_label_updated">Group renamed</string>
    <string name="toast_select_target_group">Select a group to move apps into</string>
    <string name="toast_unable_open_settings">Unable to open settings</string>

    <string name="multi_select_count">%1$d selected</string>
    <string name="new_group_header">New Group</string>
</resources>
